--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-/target/
-.project
 .settings
+target
 .classpath
-*.properties
+.factorypath
+.project
+bin
 .scannerwork
-.DS_Store
+sonar-project.properties
