--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ activemq.queue.name=AccountQueue
 container.factory.name=myFactory
 spring.activemq.user=admin
 spring.activemq.password=admin
-spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=1
+spring.activemq.broker-url=tcp://activemq:61616?jms.redeliveryPolicy.maximumRedeliveries=1
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
