--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+# Local
+# server.port = 8084
+
+# activemq.queue.name=AccountQueue
+# container.factory.name=myFactory
+# spring.activemq.user=admin
+# spring.activemq.password=admin
+# spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=1
+
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+
+# Docker
 server.port = 8084
 
 activemq.queue.name=AccountQueue
