--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,26 @@
 # spring.data.mongodb.host=localhost
 # spring.data.mongodb.port=27017
 
-# Docker
+# kilo
 server.port = 8084
 
 activemq.queue.name=AccountQueue
 container.factory.name=myFactory
 spring.activemq.user=admin
 spring.activemq.password=admin
-spring.activemq.broker-url=tcp://activemq:61616?jms.redeliveryPolicy.maximumRedeliveries=1
+spring.activemq.broker-url=tcp://activemq-cluster-ip-service:61616?jms.redeliveryPolicy.maximumRedeliveries=1
 
-spring.data.mongodb.host=mongo
+spring.data.mongodb.host=mongo-cluster-ip-service
 spring.data.mongodb.port=27017
+
+# Docker-compose
+# server.port = 8084
+
+# activemq.queue.name=AccountQueue
+# container.factory.name=myFactory
+# spring.activemq.user=admin
+# spring.activemq.password=admin
+# spring.activemq.broker-url=tcp://activemq:61616?jms.redeliveryPolicy.maximumRedeliveries=1
+
+# spring.data.mongodb.host=mongo
+# spring.data.mongodb.port=27017
